# PresidioPDF

./: .config.toml  .gitignore  .uvrc  AGENTS.md  CLAUDE.md  README.md  README_INTERACTIVE.md  README_WEB.md  RequirementsDocument.md  USAGE.md  analyze_fitz_coordinate_methods.py  analyze_pdf_to_json_fixed.py  block_mapper_usage.py  cli_modify.md  coordinate_fix_comprehensive_report.py  coordinate_reverse_lookup_analysis.py  direction_note.md  final_implementation_recommendation.py  generate_fixed_character_report.py  inspect_mapping_structure.py  modify_paper_0250815_1545.md  optimized_pdf_locator.py  presidio_gui_minimal.py  presidio_gui_simple.py  presidio_gui_tkeasygui.py  presidio_pdf_gui.py  presidio_pdf_gui_debug.py  presidio_pdf_gui_enhanced.py  presidio_pdf_gui_fixed.py  presidio_pdf_gui_pysimplegui.py  presidio_pdf_gui_simple.py  presidio_web_app.py  pyproject.toml  remap_class_ids.py  run_web_app.py  serena_config.yml  specification_gap_analysis.md  tanaka_comparison_report.py  test.py  test_flet_simple.py  (+7 more)
.claude/00_project/: 01_project_overview.md  02_inception_deck.md
.claude/01_development_docs/: 01_architecture.md  02_quality_standards.md  03_database_design.md  04_api_design.md  05_screen_transition_design.md  06_seo_requirements.md  07_error_handling_design.md  08_type_definitions.md  09_development_setup.md  10_test_strategy.md  11_frontend_design.md  12_cicd_design.md  13_e2e_test_design.md  14_security_design.md  15_performance_optimization.md  16_performance_monitoring.md
.claude/02_design_system/: 00_basic_design.md  01_design_principles.md  02_component_design.md  03_animation_system.md  04_layout_system.md
.claude/03_library_docs/: 01_dependency_strategy.md  02_presidio_integration_guide.md  03_spacy_model_testing.md  04_pymupdf_patterns.md
.claude/commands/: claude-code.md  desktop-commander.md  gemini-search.md
.claude/hooks/: ai-principles-reminder.sh  restrict_cd.py  validate-access-file.py  validate-file-access.py
.claude/slash/: claude-code.md  desktop-commander.md
.gemini/: GEMINI.md
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: architecture_patterns.md  project_overview.md  quality_standards.md  suggested_commands.md
archives/analysis/: CLAUDE.md  coordinate_fix_comprehensive_report_20250630_051424.md  direction_note.md
archives/development/: comprehensive_coordinate_comparison.py  debug_chars_method.py  generate_accurate_character_report.py  simple_accurate_analysis.py  test_coordinate_alignment_verification.py  test_final_coordinate_verification.py  test_gui_duplicate_names.py  test_integrated_system.py  test_optimized_gui.py  test_optimized_locator.py  test_pii_character_coordinates.py
archives/test_results/debug/: error_page.html
cli/: __init__.py
docs/: pyqt_migration_plan.md
flutter_app/: BUILD_INSTRUCTIONS.md  README.md
flutter_app/test/: widget_test.dart
flutter_app/windows/runner/: Runner.rc  main.cpp
outputs/temp/: page_content.html
portable/: README-portable.md
portable/templates/: python311._pth  run_gui.cmd
scripts/: verify_ocr_coordinates.py
src/: analyze_pdf_to_json_fixed.py  analyze_pdf_to_json_rawdict.py  analyzer.py  cli.py  config_manager.py  interactive_pdf_editor.py  license_plate_detector.py  pdf_annotator.py  pdf_interactive_gui.py  pdf_locator.py  pdf_masker.py  pdf_presidio_processor.py  pdf_presidio_processor.py.old  pdf_processor.py  pdf_to_image.py  presidio_web_app.py  presidio_web_core.py  web_config.py  web_main.py  web_routes.py  web_utils.py
src/analysis/: analyzer.py
src/cli/: cli.py  common.py  detect_main.py  duplicate_main.py  duplicate_utils.py  embed_main.py  mask_main.py  read_main.py  run_config_main.py
src/core/: config_manager.py  dedupe.py  entity_types.py  regex_match_utils.py
src/gui_pyqt/: __init__.py  main.py
src/gui_pyqt/controllers/: __init__.py  task_runner.py
src/gui_pyqt/models/: __init__.py  app_state.py
src/gui_pyqt/services/: __init__.py  detect_config_service.py  pipeline_service.py
src/gui_pyqt/views/: __init__.py  config_dialog.py  help_dialog.py  main_window.py  pdf_preview.py  result_panel.py
src/ocr/: __init__.py  ndlocr_service.py  text_color_detector.py
src/pdf/: annotation_utils.py  pdf_annotator.py  pdf_block_mapper.py  pdf_block_mapper_refactored.py  pdf_coordinate_mapper.py  pdf_locator.py  pdf_masker.py  pdf_processor.py  pdf_text_embedder.py  text_visibility.py
src/static/js/: app.js
src/templates/: index.html
src/web/: presidio_web_core.py  web_config.py  web_main.py  web_routes.py  web_utils.py
src/web/static/js/: app.js
src/web/templates/: index.html
static/js/: app.js
templates/: index.html
test-results/debug/: error_page.html
tests/: test_config_manager.py  test_e2e_webapp.py  test_jump_functionality.py  tests_b1_pii_analysis.py  tokenizer_test.js  web_app_test.py
tests/cli/: test_cli_smoke.py  test_common.py
tests/gui_pyqt/: test_detect_config_service.py  test_main_window_preview_selection.py  test_pipeline_export.py
tools/: build_portable.ps1  verify_portable.ps1
yolov11_training/: pyproject.toml  train_cpu.py
