[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "presidio-pdf"
version = "0.1.0"
description = "Japanese personal information detection and masking tool for PDF documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # PDF処理とPresidio関連
    "click>=8.0.0",
    "spacy[transformers]>=3.7.0",
    "presidio-analyzer>=2.2.0",
    "pdfplumber>=0.10.0",
    "PyMuPDF>=1.23.0",
    "reportlab>=4.0.0",
    "PyYAML>=6.0",
    "colorama>=0.4.0",
    # 日本語NLPモデル
    "ja-core-news-sm",
    "ja-core-news-lg",
    "ja-core-news-trf",
    "ginza>=5.2.0",
    "ja-ginza>=5.2.0",
    "ja-ginza-electra>=5.2.0",
    # 機械学習・画像処理
    "numpy<2.0",
    # GUI関連
    "TkEasyGUI>=1.0.0",
    "Pillow>=10.0.0",
    "pdf2image>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

# 軽量版（Presidio PDF処理のみ）
minimal = [
    "click>=8.0.0",
    "spacy>=3.7.0",
    "presidio-analyzer>=2.2.0", 
    "pdfplumber>=0.10.0",
    "PyMuPDF>=1.23.0",
    "PyYAML>=6.0",
    "numpy<2.0",
]

[project.scripts]
presidio-pdf = "src.pdf_presidio_processor:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.uv.sources]
ja-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_sm-3.7.0/ja_core_news_sm-3.7.0-py3-none-any.whl" }
ja-core-news-lg = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_lg-3.7.0/ja_core_news_lg-3.7.0-py3-none-any.whl" }
ja-core-news-trf = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_trf-3.7.0/ja_core_news_trf-3.7.0-py3-none-any.whl" }
