[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "presidio-pdf"
version = "0.1.0"
description = "Japanese personal information detection and masking tool for PDF documents"
readme = "README.md"
requires-python = ">=3.11"
# デフォルト依存関係（CPUモード）
dependencies = [
    # PDF処理とPresidio関連
    "click>=8.0.0",
    "spacy>=3.7.0", # CPU版（transformersなし）
    "presidio-analyzer>=2.2.0",
    "pdfplumber>=0.10.0",
    "PyMuPDF>=1.23.0",
    "reportlab>=4.0.0",
    "PyYAML>=6.0",
    "colorama>=0.4.0",
    # 機械学習・画像処理（CPU版）
    "numpy<2.0",
    "ja-core-news-sm",
    "playwright>=1.53.0",
]

[project.optional-dependencies]
# 開発用ツール
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

# GPUモード（高精度モデル）- CPU環境でも動作、GPU環境ではより高速
gpu = [
    # 高精度日本語NLPモデル（GPU推奨だがCPUでも動作、Rustコンパイラ不要）
    "ja-core-news-lg",
    # 機械学習ライブラリ（CPU版、GPU環境では自動的にGPU加速）
    "torch>=2.0.0",
    # 以下は手動インストール推奨（Rustコンパイラまたは特別な環境が必要）
    # "ja-core-news-trf",  # Transformer版（最高精度、transformers必要）
    # "ja-ginza-electra>=5.2.0",  # Electra版（tokenizers+Rust必要）
    # "transformers>=4.21.0",  # Rustコンパイラ必要
    # "spacy[transformers,cuda]>=3.7.0",  # CUDA環境のみ
    # "tensorflow>=2.13.0",  # 重いため除外
    # "cupy-cuda12x>=12.0.0",  # CUDA環境のみ
]

# 軽量版（Presidio PDF処理のみ、最小構成）
minimal = [
    "click>=8.0.0",
    "spacy>=3.7.0",
    "presidio-analyzer>=2.2.0", 
    "pdfplumber>=0.10.0",
    "PyMuPDF>=1.23.0",
    "PyYAML>=6.0",
    "numpy<2.0",
    "ja-core-news-sm",  # 最小日本語モデル
]

# Webアプリケーション専用
web = [
    "Flask>=3.0.0",
    "Flask-CORS>=4.0.0",
    "Werkzeug>=3.0.0",
    "playwright>=1.42.0",
    "requests>=2.25.0",
]

# GUI専用
gui = [
    "FreeSimpleGUI>=5.0.0",
    "Pillow>=10.0.0",
    "pdf2image>=1.16.0",
    "ginza>=5.2.0",
    "ja-ginza>=5.2.0",
]

[project.scripts]
presidio-pdf = "src.pdf_presidio_processor:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.uv.sources]
ja-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_md-3.7.0/ja_core_news_md-3.7.0-py3-none-any.whl" }
# GPU用高精度日本語spaCyモデル
ja-core-news-lg = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_lg-3.7.0/ja_core_news_lg-3.7.0-py3-none-any.whl" }
ja-core-news-trf = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_trf-3.7.0/ja_core_news_trf-3.7.0-py3-none-any.whl" }
ja-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_sm-3.7.0/ja_core_news_sm-3.7.0-py3-none-any.whl" }
