[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "presidio-pdf"
version = "0.1.0"
description = "Japanese personal information detection and masking tool for PDF documents"
readme = "README.md"
requires-python = ">=3.11,<3.12"
# 最小限のデフォルト依存関係（CPUモード）
dependencies = [
    # 基本的なCLI機能に必要な最小限のパッケージ
    "click>=8.0.0",
    "spacy>=3.7.0",
    "presidio-analyzer>=2.2.0",
    "PyMuPDF>=1.23.0",
    "PyYAML>=6.0",
    # spaCy日本語モデル
    "ja-core-news-sm>=3.8.0",
    "ja-core-news-md>=3.7.0",
]

[project.optional-dependencies]
# 開発用ツール
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

# spaCyモデル（個別インストール用）
model-sm = ["ja-core-news-sm>=3.8.0"]
model-md = ["ja-core-news-md>=3.7.0"]
model-lg = ["ja-core-news-lg>=3.7.0"]
model-trf = ["ja-core-news-trf>=3.7.0"]
model-ginza-electra = ["ginza>=5.2.0", "ja-ginza-electra>=5.2.0"]

# GPUモード（GPU系パッケージのみ）
gpu = [
    "torch>=2.0.0",
    "pandas>=2.3.1",
    "reportlab>=4.0.0",
    "pdfplumber>=0.10.0",
    "ja-core-news-lg>=3.7.0",
    # 高精度モデル（Transformer系）
    "ja-core-news-trf>=3.7.0",
    # GiNZA高精度モデル
    "ginza>=5.2.0",
    "ja-ginza-electra>=5.2.0"
]

# 軽量版（Presidio PDF処理のみ、最小構成）
minimal = [
    "click>=8.0.0",
    "spacy>=3.7.0",
    "presidio-analyzer>=2.2.0",
    "PyMuPDF>=1.23.0",
    "PyYAML>=6.0",
    "ja-core-news-sm",
]

# GUI専用（PyQt6ベース）
gui = [
    "PyQt6>=6.6.0",
    "PyQt6-Qt6>=6.6.0",
]

[project.scripts]
# New split command entrypoints
codex-read = "cli.read_main:main"
codex-detect = "cli.detect_main:main"
codex-duplicate-process = "cli.duplicate_main:main"
codex-mask = "cli.mask_main:main"
codex-run-config = "cli.run_config_main:main"

# PyQt GUI app
presidio-gui = "gui_pyqt.main:main"


[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.uv.sources]
ja-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_md-3.7.0/ja_core_news_md-3.7.0-py3-none-any.whl" }
# GPU用高精度日本語spaCyモデル
ja-core-news-lg = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_lg-3.7.0/ja_core_news_lg-3.7.0-py3-none-any.whl" }
ja-core-news-trf = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_trf-3.7.0/ja_core_news_trf-3.7.0-py3-none-any.whl" }
ja-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_sm-3.8.0/ja_core_news_sm-3.8.0-py3-none-any.whl" }

ja-ginza-electra = { url = "https://github.com/megagonlabs/ginza/releases/download/v5.2.0/ja_ginza_electra-5.2.0-py3-none-any.whl" }

# [dependency-groups] - 不要なので削除
