[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolov11-cpu-training"
version = "0.1.0"
description = "YOLOv11 CPU-only training for Japanese license plate detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # YOLOv11 and computer vision
    "ultralytics>=8.3.0",
    "opencv-python>=4.8.0",
    
    # Core dependencies
    "numpy>=1.21.0,<2.0",
    "pillow>=9.0.0",
    "pyyaml>=6.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "pandas>=1.3.0",
    
    # Additional utilities
    "requests>=2.25.0",
    "tqdm>=4.64.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

# Note: Install PyTorch CPU manually with:
# uv pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu